# Diploma_SkyPro_NOV24

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  content.json  docker-compose.yaml  groups.json  pyproject.toml  users.json
config/: settings.py  urls.py
content/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_document_is_approved.py  0003_remove_document_is_approved_document_status.py  0004_alter_document_options.py  0005_alter_document_name.py
users/: permissions.py  urls.py  views.py
users/management/commands/: cmu.py
users/migrations/: 0001_initial.py
