[tool.poetry]
name = "diploma skypro nov24"
version = "0.1.0"
description = "SkyPro Diploma work for study course Pytthon Developer IND40.0"
authors = ["rinatyuk-git <17_ufo_RB@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.1.2"
python-dotenv = "^1.0.1"
django-admin = "^2.0.2"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
redis = "^5.2.0"
flake8 = "^7.1.1"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
